Bug 224027 - investment transaction editor problem with negative interest
Summary: investment transaction editor problem with negative interest
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-24 13:11 UTC by Peter Pointner
Modified: 2010-02-06 09:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fix for investment transactions with negative interest (or fees) (4.38 KB, patch)
2010-01-24 13:13 UTC, Peter Pointner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Pointner 2010-01-24 13:11:07 UTC
Version:           3.95.0 SVN-Rev. 1079370 (using KDE 4.3.1)
OS:                Linux
Installed from:    openSUSE RPMs

Investment transactions allow to input negative interest or fees, which makes sense for accrued interest ("Stückzinsen" in german). To reproduce the problems do:
- create a new investment transaction "buy shares" and fill in the necessary fields.
- enter a negative value for interest, PROBLEM: total is wrong
- save the transaction, it is handled as expected, but PROBLEM: the negative sign is not shown.
- edit the transaction, PROBLEM: the negative sign is silently gone, you have to reenter it.

I will add a patch that fixes the problems for me.
Comment 1 Peter Pointner 2010-01-24 13:13:03 UTC
Created attachment 40192 [details]
Fix for investment transactions with negative interest (or fees)
Comment 2 Thomas Baumgart 2010-02-06 09:07:18 UTC
SVN commit 1085899 by tbaumgart:

BUG: 224027

 M  +4 -4      dialogs/investtransactioneditor.cpp  
 M  +8 -8      widgets/transaction.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1085899