BUG: 224027

svn path=/trunk/playground/office/kmymoney/; revision=1085899